# sample-ml-pipeline

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
config/: base.yaml
infra/: Dockerfile
src/: config.py  main.py
src/data/: data_downloader.py  data_loader.py  etl.py
src/model/: model_trainer.py
src/utils/: custom_logger.py  files.py  seed.py  statistics.py
tests/integration/: test.yaml  test_data_downloader.py  test_main.py
tests/unit/: test_data_loader.py  test_etl.py  test_files.py  test_seed.py  test_statistics.py  test_train.py
